Folder structure, README, release npm package

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Nimiq Style Overview</title>
-        <link rel="stylesheet" href="./nimiq-style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Muli:400,600,700">
+        <link rel="stylesheet" href="./src/main.css">
         <style>
             body {
                 padding: 5rem 0;
@@ -42,7 +43,7 @@
 
             <div class="nq-card">
                 <div class="nq-card-header">
-                        <h1 class="nq-h1">Typography</h1>
+                    <h1 class="nq-h1">Typography</h1>
                 </div>
                 <div class="nq-card-body">
                     <h1 class="nq-h1">Heading H1</h1>
@@ -60,7 +61,7 @@
 
             <div class="nq-card">
                 <div class="nq-card-header">
-                        <h1 class="nq-h1">Colors</h1>
+                    <h1 class="nq-h1">Colors</h1>
                 </div>
                 <div class="nq-card-body">
                     <p class="nq-blue">Nimiq Blue</p>
@@ -100,7 +101,7 @@
 
             <div class="nq-card">
                 <div class="nq-card-header">
-                        <h1 class="nq-h1">Buttons</h1>
+                    <h1 class="nq-h1">Buttons</h1>
                 </div>
                 <div class="nq-card-body">
                     <h2 class="nq-h2">Primary buttons</h2>
@@ -124,28 +125,6 @@
                     <button class="nq-button-s red">Red button</button>
                 </div>
             </div>
-
-            <!-- <div style="background: white;" class="nimiq-dark">
-                <h1>Heading H1</h1>
-                <h2>Heading H1+H2</h2>
-                <span></span>
-                <h2>Heading H2</h2>
-                <h3>Heading H3</h3>
-                <h4>Heading H4</h4>
-                <h5>Heading H5</h5>
-                <h6>Heading H6</h6>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. <a href="#"></a>Richard McClintock</a>, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (<a href="#">The Extremes of Good and Evil</a>) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-                <br>
-                <a href="#">link (a)</a><br>
-                <br>
-                <button>button</button>
-                <a href="#" secondary>a[secondary]</a>
-                <button disabled>button[disabled]</button><br>
-                <br>
-                <button class="secondary">button.secondary</button><br>
-                <br>
-                <button class="small">button.small</button>
-            </div> -->
         </div>
     </body>
 </html>
